[package]
name = "smolkv-client"
version = "0.1.1"
edition = "2021"
description = "A minimal client for SmolKV"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

