[package]
name = "smolkv-client"
version = "0.1.2"
edition = "2021"
description = "A minimal client for SmolKV"
license = "MIT"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
config = "0.15.11"
dirs = "6.0.0"
toml = "0.8.20"
